--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <span>CAD • Aerospace • Research</span>
   </div>
   <video autoplay muted loop playsinline>
-    <source src="assets/toroidal/demo.mp4" type="video/mp4">
+    <source src="demo.mp4" type="video/mp4">
   </video>
 </section>
 
@@ -43,7 +43,7 @@
     <span>Mechanical Design • Gears • DFMA</span>
   </div>
   <video autoplay muted loop playsinline>
-    <source src="assets/bevel/rotation.mp4" type="video/mp4">
+    <source src="rotation.mp4" type="video/mp4">
   </video>
 </section>
 
@@ -57,7 +57,7 @@
     </p>
     <span>Astrodynamics • Simulation • GMAT</span>
   </div>
-  <img src="assets/gmat/trajectory.png" alt="GMAT Trajectory">
+  <img src="trajectory.png" alt="GMAT Trajectory">
 </section>
 
 <footer>
