--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     </p>
     <span>CAD • Aerospace • Research</span>
   </div>
-  <video autoplay muted loop playsinline>
-    <source src="demo.mp4" type="video/mp4">
-  </video>
+  <img src="demo.jpg" alt="Toroidal Propeller">
 </section>
 
 <section class="project fade reverse">
@@ -42,9 +40,7 @@
     </p>
     <span>Mechanical Design • Gears • DFMA</span>
   </div>
-  <video autoplay muted loop playsinline>
-    <source src="rotation.mp4" type="video/mp4">
-  </video>
+  <img src="rotation.jpg" alt="Bevel Gear">
 </section>
 
 <section class="project fade">
