--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-  <h1>Your Name</h1>
+  <h1>Thanga Anthony Celestine S</h1>
 </nav>
 
 <section class="hero fade">
@@ -27,7 +27,7 @@
     </p>
     <span>CAD • Aerospace • Research</span>
   </div>
-  <img src="demo.jpg" alt="Toroidal Propeller">
+  <img src="demo.jpeg" alt="Toroidal Propeller">
 </section>
 
 <section class="project fade reverse">
@@ -40,7 +40,7 @@
     </p>
     <span>Mechanical Design • Gears • DFMA</span>
   </div>
-  <img src="rotation.jpg" alt="Bevel Gear">
+  <img src="rotation.jpeg" alt="Bevel Gear">
 </section>
 
 <section class="project fade">
@@ -53,7 +53,7 @@
     </p>
     <span>Astrodynamics • Simulation • GMAT</span>
   </div>
-  <img src="trajectory.png" alt="GMAT Trajectory">
+  <img src="trajectory.jpeg" alt="GMAT Trajectory">
 </section>
 
 <footer>
