--- a/index.html
+++ b/index.html
@@ -3,62 +3,94 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Engineering Portfolio</title>
+  <title>Anthony S | Engineering Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav>
-  <h1>Thanga Anthony Celestine S</h1>
-</nav>
+<div class="bg-glow"></div>
 
-<section class="hero fade">
-  <h2>Engineering Precision.<br>Research-Driven Design.</h2>
-  <p>Mechanical & Aerospace Engineering Portfolio</p>
+<!-- SECTION 1: INTRO -->
+<section class="intro reveal">
+  <h1>
+    Hi, I’m <span>Anthony</span><br>
+    I design <em>motion</em>, <em>mechanisms</em>, and <em>space systems</em>
+  </h1>
+  <p>
+    Mechanical & Aerospace Engineering student focused on CAD,
+    simulation, and research-driven design.
+  </p>
 </section>
 
-<section class="project fade">
-  <div class="text">
-    <h3>Toroidal Propeller Design</h3>
-    <p>
-      Advanced CAD modeling and conceptual aerodynamic analysis of
-      toroidal propellers aimed at reducing acoustic signature and
-      improving wake efficiency in UAV propulsion.
-    </p>
-    <span>CAD • Aerospace • Research</span>
+<!-- SECTION 2: WORK -->
+<section class="work">
+
+  <h2 class="section-title reveal">Selected Work</h2>
+
+  <div class="project reveal">
+    <div class="media">
+      <img src="demo.jpeg" alt="Toroidal Propeller">
+    </div>
+    <div class="info">
+      <h3>Toroidal Propeller</h3>
+      <p>
+        Research-focused CAD and conceptual aerodynamic design aimed at
+        reducing acoustic signature and improving wake efficiency for UAVs.
+      </p>
+      <div class="tags">
+        <span>Aerospace</span><span>CAD</span><span>Research</span>
+      </div>
+    </div>
   </div>
-  <img src="demo.jpeg" alt="Toroidal Propeller">
-</section>
 
-<section class="project fade reverse">
-  <div class="text">
-    <h3>Bevel Gear Design</h3>
-    <p>
-      Precision mechanical design of bevel gear systems with emphasis
-      on power transmission, contact ratio, manufacturability,
-      and alignment constraints.
-    </p>
-    <span>Mechanical Design • Gears • DFMA</span>
+  <div class="project reverse reveal">
+    <div class="media">
+      <img src="rotation.jpeg" alt="Toroidal Propeller">
+    </div>
+    <div class="info">
+      <h3>Bevel Gear Mechanism</h3>
+      <p>
+        Precision mechanical transmission design focusing on torque transfer,
+        contact mechanics, and manufacturability.
+      </p>
+      <div class="tags">
+        <span>Mechanical</span><span>DFMA</span><span>Gears</span>
+      </div>
+    </div>
   </div>
-  <img src="rotation.jpeg" alt="Bevel Gear">
-</section>
 
-<section class="project fade">
-  <div class="text">
-    <h3>GMAT Mission Trajectories</h3>
-    <p>
-      Orbital trajectory modeling and mission analysis using NASA GMAT,
-      including interplanetary transfer optimization and visualization
-      of spacecraft dynamics.
-    </p>
-    <span>Astrodynamics • Simulation • GMAT</span>
+  <div class="project reveal">
+    <div class="media">
+      <img src="trajectory.jpeg" alt="GMAT Trajectory">
+    </div>
+    <div class="info">
+      <h3>GMAT Mission Trajectories</h3>
+      <p>
+        Orbital trajectory modeling and mission visualization using NASA GMAT,
+        focusing on spacecraft dynamics and interplanetary transfers.
+      </p>
+      <div class="tags">
+        <span>Astrodynamics</span><span>Simulation</span><span>GMAT</span>
+      </div>
+    </div>
   </div>
-  <img src="trajectory.jpeg" alt="GMAT Trajectory">
+
 </section>
 
-<footer>
-  <p>© 2026 Your Name</p>
-</footer>
+<!-- SECTION 3: CONTACT -->
+<section class="contact reveal">
+  <h2>Let’s build something meaningful</h2>
+  <p>
+    Interested in collaboration, research, or engineering work?<br>
+    Reach out — I’d love to connect.
+  </p>
+
+  <div class="contact-links">
+    <a href="mailto:your@email.com">anthonys.celestine@gmail.com</a>
+    <a href="https://github.com/yourusername" target="_blank">anthonys.celestine</a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank">https://www.linkedin.com/in/anthonyceles/</a>
+  </div>
+</section>
 
 <script src="script.js"></script>
 </body>
