--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <section class="intro reveal">
   <h1>
     Hi, I’m <span>Anthony</span><br>
-    I design <em>motion</em>, <em>mechanisms</em>, and <em>space systems</em>
+    I am a <em>SOLIDWORKS</em>, <em>ANSYS</em>, and <em>GMAT</em> enthusiast
   </h1>
   <p>
-    Mechanical & Aerospace Engineering student focused on CAD,
+    Mechanical Engineering student focused on CAD,
     simulation, and research-driven design.
   </p>
 </section>
