--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
   <div class="project reveal">
     <div class="media">
-      <img src="demo.jpeg" alt="Toroidal Propeller">
+      <video autoplay muted loop playsinline>
+        <source src="demo.mp4" type="video/mp4">
+      </video>
     </div>
     <div class="info">
       <h3>Toroidal Propeller</h3>
@@ -45,7 +47,9 @@
 
   <div class="project reverse reveal">
     <div class="media">
-      <img src="rotation.jpeg" alt="Toroidal Propeller">
+      <video autoplay muted loop playsinline>
+        <source src="rotation.mp4" type="video/mp4">
+      </video>
     </div>
     <div class="info">
       <h3>Bevel Gear Mechanism</h3>
