--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section class="work">
 
   <h2 class="section-title reveal">Selected Work</h2>
-
+<a href="toroidal.html" class="project-link">
   <div class="project reveal">
     <div class="media">
       <video autoplay muted loop playsinline>
@@ -44,7 +44,8 @@
       </div>
     </div>
   </div>
-
+</a>
+<a href="bevel.html" class="project-link">
   <div class="project reverse reveal">
     <div class="media">
       <video autoplay muted loop playsinline>
@@ -62,7 +63,8 @@
       </div>
     </div>
   </div>
-
+</a>
+<a href="gmat.html" class="project-link">
   <div class="project reveal">
     <div class="media">
       <img src="trajectory.jpeg" alt="GMAT Trajectory">
@@ -78,7 +80,7 @@
       </div>
     </div>
   </div>
-
+</a>
 </section>
 
 <!-- SECTION 3: CONTACT -->
