--- a/toroidal.html
+++ b/toroidal.html
@@ -16,7 +16,7 @@
 
 <section class="project-media reveal">
   <video autoplay muted loop playsinline>
-    <source src="assets/toroidal/demo.mp4" type="video/mp4">
+    <source src="demo.mp4" type="video/mp4">
   </video>
 </section>
 
