--- a/gmat.html
+++ b/gmat.html
@@ -11,13 +11,11 @@
 <div class="bg-glow"></div>
 
 <section class="project-page intro reveal">
-  <h1>Toroidal Propeller</h1>
+  <h1>Orbital Lunar Fly-By Mission</h1>
 </section>
 
 <section class="project-media reveal">
-  <video autoplay muted loop playsinline>
-    <source src="assets/toroidal/demo.mp4" type="video/mp4">
-  </video>
+  <img src="trajectory.jpeg" alt="GMAT Trajectory">
 </section>
 
 <section class="project-section reveal">
