--- a/bevel.html
+++ b/bevel.html
@@ -11,12 +11,12 @@
 <div class="bg-glow"></div>
 
 <section class="project-page intro reveal">
-  <h1>Toroidal Propeller</h1>
+  <h1>Bevel Gear</h1>
 </section>
 
 <section class="project-media reveal">
   <video autoplay muted loop playsinline>
-    <source src="assets/toroidal/demo.mp4" type="video/mp4">
+    <source src="rotation.mp4" type="video/mp4">
   </video>
 </section>
 
