--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- SECTION 2: WORK -->
 <section class="work">
 
-  <h2 class="section-title reveal">Selected Work</h2>
+  <h2 class="section-title reveal">My Work</h2>
 <a href="toroidal.html" class="project-link">
   <div class="project reveal">
     <div class="media">
