--- a/toroidal.html
+++ b/toroidal.html
@@ -32,18 +32,24 @@
 <section class="project-section reveal">
   <h2>Innovation & Contribution</h2>
   <p>
-    My innovation lies in adapting toroidal geometry for manufacturable UAV-scale
-    propulsion, exploring blade continuity, curvature constraints, and structural
-    feasibility using CAD-driven iteration.
+    Toroidal Propellers have been a topic of discussion in many fields except military,
+    where I personally believed toroidal propellers will truly fuflfil their purpose.
+    I worked on integrating toroidal propellers into military UAVs for improved
+    stealth, which would massively benefit clandestine operations
   </p>
 </section>
 
 <section class="project-section reveal">
   <h2>Engineering Thought Process</h2>
   <p>
-    The design process began by questioning conventional blade-tip losses and
-    exploring non-planar flow structures. Design decisions were guided by
-    aerodynamic intuition, DFMA constraints, and future simulation potential.
+    If there is one factor that must be considered when building a military UAV, 
+    is stealth. Any UAV with the conventional blade propellers can be easily
+    detected because of the noise they make due to tiny disturbances of air called 
+    vortices that form in the sharp ends. What's the best way to remove these 
+    vortices? Make sure you have no sharp ends. And what's the best shape with
+    the least sharp edges while still be aerodynamically ideal? A toroid. After
+    experimental validation it was clear that 3 toroids are necessary to create
+    one propeller for the most efficient performance.
   </p>
 </section>
 
