--- a/bevel.html
+++ b/bevel.html
@@ -23,27 +23,32 @@
 <section class="project-section reveal">
   <h2>Project Overview</h2>
   <p>
-    This project focuses on the conceptual design and CAD development of a
-    toroidal propeller aimed at reducing tip vortices, acoustic noise, and
-    improving wake efficiency for UAV propulsion systems.
+    Developed a precision bevel gear system to study angular power 
+    transmission and torque transfer between intersecting shafts. 
+    The design emphasizes contact mechanics, alignment constraints, 
+    and manufacturability, with geometry optimized for smooth 
+    meshing and mechanical efficiency.
   </p>
 </section>
 
 <section class="project-section reveal">
   <h2>Innovation & Contribution</h2>
   <p>
-    My innovation lies in adapting toroidal geometry for manufacturable UAV-scale
-    propulsion, exploring blade continuity, curvature constraints, and structural
-    feasibility using CAD-driven iteration.
+    I increased the bevel gear's head length to imrpove the durability of
+    bevel gears, which was a huge problem as they are consistently under
+    stress which means they have to be changed frequently.
   </p>
 </section>
 
 <section class="project-section reveal">
   <h2>Engineering Thought Process</h2>
   <p>
-    The design process began by questioning conventional blade-tip losses and
-    exploring non-planar flow structures. Design decisions were guided by
-    aerodynamic intuition, DFMA constraints, and future simulation potential.
+    This project helped me understand that sometimes the biggest problems
+    often have the most smallest and simplest solutions. The problem where 
+    bevel gears fracture or malfunction due to low durability is very 
+    dangerous. By simple simulation and stress mechanics, I found that
+    by increasing the bevel head's size by x, the overall stress applied 
+    per unit area decreases by 1/sqrt(x)
   </p>
 </section>
 
