--- a/gmat.html
+++ b/gmat.html
@@ -21,27 +21,33 @@
 <section class="project-section reveal">
   <h2>Project Overview</h2>
   <p>
-    This project focuses on the conceptual design and CAD development of a
-    toroidal propeller aimed at reducing tip vortices, acoustic noise, and
-    improving wake efficiency for UAV propulsion systems.
+    Simulated and visualized spacecraft mission trajectories
+    using NASA GMAT, focusing on orbital mechanics and trajectory design. 
+    The project explores spacecraft motion, transfer orbits, and mission 
+    sequencing to understand real-world astrodynamics and space mission planning.
   </p>
 </section>
 
 <section class="project-section reveal">
   <h2>Innovation & Contribution</h2>
   <p>
-    My innovation lies in adapting toroidal geometry for manufacturable UAV-scale
-    propulsion, exploring blade continuity, curvature constraints, and structural
-    feasibility using CAD-driven iteration.
+   I designed a trajoectory that satellites can use to save fuel costs, since 
+    the Moon's gravity will be used as a slingshot along the way to reach the
+    desired place.
   </p>
 </section>
 
 <section class="project-section reveal">
   <h2>Engineering Thought Process</h2>
   <p>
-    The design process began by questioning conventional blade-tip losses and
-    exploring non-planar flow structures. Design decisions were guided by
-    aerodynamic intuition, DFMA constraints, and future simulation potential.
+    My thinking process was iterative and exploratory. I started with
+    simple Earth-centered orbits to build intuition, then gradually introduced
+    more complexity such as transfers and multi-body effects. Many of the 
+    early simulations did not behave as expected, which forced me to slow down 
+    and question my assumptions about reference frames, propagation settings, and
+    maneuver timing. Over time, this trial-and-error approach helped me connect mathematical 
+    orbital mechanics with real spacecraft behavior, turning GMAT from a simulation tool 
+    into a way of thinking about space missions.
   </p>
 </section>
 
